logs_tsvc/s318.log
[RunLogger] 运行日志目录: /home/hanning/comet/runs/2026-07-16_06-30-10_tsvc_s318
  Dataset type: tsvc
============================================================
COMET agent: s318  max_steps=5
============================================================

[Evidence collection -- one-time analysis]
  IR extraction failed: Clang -emit-llvm failed: /home/hanning/comet/TSVC_shim/kernels/s318/s318.c:12:26: error: expected ';' after top level declarator
int kernel_s318( int inc)
                         ^
                         ;
/home/hanning/comet/TSVC_shim/kernels/s318/s318.c:68:28: warning: incompatible pointer to integer conversion passing
Evidence collection failed (IR extraction error?)
